chore(c8UserTask): dont import candidate group data
related to #12376